<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.polettiapps.lucaspoletti.math.Activity.CalculadoraRegraDeTresSimplesActivity">


    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText_Se"
        android:hint="@string/se"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
         />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText_equivaleA"
        android:hint="@string/equivalea"
        android:layout_alignTop="@+id/editText_Se"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="numberDecimal"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText_entao"
        android:hint="@string/entao"
        android:layout_below="@+id/editText_Se"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="numberDecimal"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText_x"
        android:text="@string/x"
        android:layout_below="@+id/editText_equivaleA"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:editable="false"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:id="@+id/button_calcular"
        android:layout_below="@+id/editText_entao"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorAccent"
        android:textColor="#DADADA"
        android:layout_alignRight="@+id/editText_x"
        android:layout_alignEnd="@+id/editText_x"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/preencherOsCampos"
        android:id="@+id/textView_resposta"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"/>


</RelativeLayout>
