<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.polettiapps.lucaspoletti.math.Activity.CalculadoraPotenciaActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText_valor"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/numeroReal"
        android:textAlignment="center"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editText_elevado"
        android:layout_below="@+id/editText_valor"
        android:layout_centerHorizontal="true"
        android:hint="@string/numeroElevado"
        android:textAlignment="center"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:id="@+id/button_calcularPotencias"
        android:layout_below="@+id/editText_elevado"
        android:textColor="@color/colorText"
        android:background="@color/colorAccent"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/preencherOsCampos"
        android:id="@+id/textView_respostaPotencia"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"/>


</RelativeLayout>
