<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.polettiapps.lucaspoletti.math.Activity.CalculadoraIMCActivity">

    <EditText
        android:id="@+id/editText_altura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:hint="@string/hintAltura"
        />

    <EditText
        android:id="@+id/editText_peso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_altura"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:hint="@string/hintPeso"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:id="@+id/button_calcularIMC"
        android:layout_below="@+id/editText_peso"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorAccent"
        android:textColor="@color/colorText"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/preencherOsCampos"
        android:id="@+id/textView_respostaIMC1"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView_respostaIMC2"
        android:layout_below="@+id/textView_respostaIMC1"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
